test/errors/setpc1.rcasm
    org 0x0801

    add
    add
    add
    add
    add

    org 0x0805

    add